# AITradingStrategist

./: .env.example  .gitignore  CLAUDE.md  DEVELOPMENT_READINESS.md  Dockerfile  Makefile  PROJECT_CONTEXT.md  README.md  docker-compose.yml  main.py  mcp_server.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
agents/: __init__.py  base.py  json_utils.py  self_assessment.py  signal_agent.py  strategy_supervisor.py
config/: __init__.py  settings.py
docs/: API.md  ARCHITECTURE.md  AUTONOMOUS_SIGNAL_SERVICE.md  CONFIGURATION.md  DEPLOYMENT.md  DESIGN_PATTERNS.md  PRODUCTION_ROADMAP.md  WORKFLOW.md
manifests/: deployment.yaml
manifests/base/: configmap.yaml  deployment.yaml  hpa.yaml  kustomization.yaml  service.yaml  serviceaccount.yaml
manifests/overlays/dev/: configmap-patch.yaml  kustomization.yaml
manifests/overlays/prod/: configmap-patch.yaml  kustomization.yaml  serviceaccount-patch.yaml
memory/: __init__.py  store.py  vector_store.py
tests/: test_market_context_and_rag.py  test_trading_agent.py
tools/: __init__.py  evaluation_tools.py  knowledge_tools.py  liquidity_tools.py  news_tools.py  notification_tools.py  schema_builder.py  sentiment_tools.py  trading_tools.py
workflows/: __init__.py  knowledge_indexer.py  market_context.py  scheduler.py  trading_workflow.py
