[project]
name = "trading-intelligence-agent"
version = "0.1.0"
description = "Self-assessing trading signal agent with autonomous strategy evolution"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "ta>=0.11.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "structlog>=24.4.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "feedparser>=6.0.11",
    "mcp[cli]>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "black>=24.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]
live-data = [
    "ccxt>=4.0.0",
    "yfinance>=0.2.40",
]
rag = [
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
]
production = [
    "redis>=5.2.0",
    "boto3>=1.35.0",
    "psycopg2-binary>=2.9.0",
]

[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["agents*", "config*", "memory*", "tools*", "workflows*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
no_strict_optional = true
